--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 	Note: 5.6-x is a major revision from 5.5-1 (the previous version
 	on CRAN).  See major changes from 5.6-1 onwards.
 
+2010-06-01  Version: 5.6-7
+
+	* rgenoud.R: Improved handling of the parent environment when the 'transform' option is used.	
+	* operators.ccp: Fixed boundary issue for the integer version of the Polytope Crossover operator (P5 and function JaIntegeroper4).
+
 2009-08-14  Version: 5.6-6
 
 	* rgenoud.Rd: Improved the documentation of the 'transform' option.
