--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-05-06 Version: 5.7-9
+	* operators.cpp: oper5(), Simple Crossover, always hit the maximum
+	unique individual limit. Corrected the logic to only check for
+	unique children in the crossover portion. 
+
 2012-06-03 Version: 5.7-8
 	* rgenoud.R: Added the following options back in for backward compatibility, but a warning is printed if they are used: output.path and output.append. Please use 'sink' instead.
 
